Added the training log and config

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3 - Pre-Procesing (Structure-from-Motion)\n",
+    "# Step 3 - Preprocesing (Structure-from-Motion)\n",
     "\n",
     "# COLMAP: The engine for Structure-from-Motion (calculates camera poses).\n",
     "# FFmpeg: Required to extract individual frames from the input video file.\n",
@@ -103,7 +103,7 @@
    "source": [
     "# Step 4 - Gaussian Splatting Model Training\n",
     "\n",
-    "# MAX_JOBS=1: Forces the system to use fewer parallel workers\n",
+    "# MAX_JOBS=5: Forces the system to use fewer parallel workers\n",
     "#   for Kaggle to prevent crashing the 30GB RAM limit during dataloading.\n",
     "\n",
     "# We use 'splatfacto', Nerfstudio's implementation of 3D Gaussian Splatting.\n",
@@ -122,7 +122,7 @@
     "\n",
     "# --viewer.quit-on-train-completion True:\n",
     "#    Tells the process to automatically shut down after 15,000 steps. \n",
-    "!export MAX_JOBS=1 && ns-train splatfacto --data processed_data \\\n",
+    "!export MAX_JOBS=5 && ns-train splatfacto --data processed_data \\\n",
     "    --vis tensorboard \\\n",
     "    --max-num-iterations 15000 \\\n",
     "    --pipeline.model.cull_alpha_thresh 0.01 \\\n",
