clarify logs metrics

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "# We use 'splatfacto', Nerfstudio's implementation of 3D Gaussian Splatting.\n",
     "\n",
-    "# --vis tensorboard: Logs training metrics (Loss, PSNR) to TensorBoard instead of \n",
+    "# --vis tensorboard: Logs training metrics to TensorBoard instead of \n",
     "#   launching the interactive viewer. Best for headless cloud environments.\n",
     "\n",
     "# --max-num-iterations 15000: A balance between quality and speed.\n",
